# Pypass

./: .gitignore  README.md  generator.py  main.py  pyproject.toml
pypass/: __init__.py  __main__.py  generator.py  main.py
