[project]
name = "Pypass"
version = "0.1.0"
description = "Simple python password generator"
authors = [
    {"name" = "Peter Vislocky"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "pyperclip>=1.11.0",
    "rich>=14.2.0",
]

[project.scripts]
pypass = "pypass.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
